k8s/travelmaster-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: travelmaster-backend
  namespace: travelmaster
  labels:
    app: travelmaster-backend
spec:
  type: ClusterIP
  selector:
    app: travelmaster-backend
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
